Fix dropdown button on mobile

--- a/webapp/src/main/webapp/skin/webconferencing.css
+++ b/webapp/src/main/webapp/skin/webconferencing.css
@@ -59,7 +59,7 @@
 	border-radius: 3px 0 0 3px;
 }
 
-.callButton.preferred + .dropdown-toggle {
+.callButton.preferred ~ .dropdown-toggle {
 	margin-left: -1px;
 	padding-left: 5px;
 	padding-right: 5px;
@@ -96,7 +96,7 @@
 	color:#ffffff;
 }
 
-.callButton.preferred.miniChatCall + .dropdown-toggle {
+.callButton.preferred.miniChatCall ~ .dropdown-toggle {
 	padding-left: 2px;
 }
 
@@ -116,7 +116,7 @@
 	display: none;
 }*/
 
-#socialTopLayout .callButtonContainer > .callButton + .dropdown-toggle {
+#socialTopLayout .callButtonContainer > .callButton ~ .dropdown-toggle {
 	margin-left: -1px !important;
 }
 
@@ -134,7 +134,7 @@
 }
 
 /***** Transparent styles (for space avatar and mini-chat, the transparentButton class will be triggered by Javascript) *******/
-.transparentButton, .miniChatCall, .miniChatCall + .dropdown-toggle {
+.transparentButton, .miniChatCall, .miniChatCall ~ .dropdown-toggle {
 	background: transparent;
 	border: solid 1px transparent;
 	box-shadow: none;
